# CodeCrafters Note:
#
# We've included a set of dependencies that we think are essential for this challenge. You
# can make changes to this file if you'd like to use different dependencies.
#
# When updating this file, make sure to run `cargo build` to ensure that `Cargo.lock` is updated too.
[package]
name = "git-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] } # http requests
bytes = "1.6"                                                    # helps wrap responses from reqwest
tokio = { version = "1.37", features = ["full"] }                # async http requests
clap = { version = "4.5", features = ["derive"]}                # creating a cli
flate2 = "1.0"                                                     # gzip compression
sha1 = "0.10"                                                    # hashing
hex = "0.4"                                                      # working with hash output
anyhow = "1.0"                                                  # error handling
thiserror = "1.0"                                               # error handling
tempfile = "3.10"
