[package]
name = "rgit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] } # http requests
bytes = "1.6"                                                    # helps wrap responses from reqwest
tokio = { version = "1.37", features = ["full"] }                # async http requests
clap = { version = "4.5", features = ["derive"]}                # creating a cli
flate2 = "1.0"                                                     # gzip compression
sha1 = "0.10"                                                    # hashing
hex = "0.4"                                                      # working with hash output
anyhow = "1.0"                                                  # error handling
thiserror = "1.0"                                               # error handling
tempfile = "3.10"
